<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware" Id="{001e16b0-c959-4c2c-800c-e6b7ef5ebc23}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL //complete modules
	robot3, robot4 : RobotA22;
	
	benderA22Left : FoldingMachine;
	
	skidA22Left, skidA22Right : SkidMagazine;
	magazineA22Left, magazineA22Right : SkidMagazine;
	
	wrapperA22 : WrapMachine;
	
	horizontalDriveA22Left, horizontalDriveA22Right : ServoNC := (
		limitSensorDefaultState := TRUE);
		
	verticalDriveA22Left, verticalDriveA22Right : ClearLinkMC := (
		limitSensorDefaultState := TRUE, 
		homingDirection := TRUE, //outwards (up)
		minPosition := 0,
		displacementPerRotation := 1,
		unitsPerPulse := 800); //800 counts = 1 rotation
		
	insertionA22Left, insertionA22Right : Insertion;
		
	pistonA22Bottom : SimplePiston;
	
	(*
	each of these suction arrays are composed of 3 pads
	pad [2] is the corner pad used for corner guards
	pads [1] and [3] are the outer pads used for corner cardboards
	*)
	suctionA22TopLeft : ARRAY[1..3] OF SuctionPad;
	suctionA22TopRight : ARRAY[1..3] OF SuctionPad;
	suctionA22BottomLeft : ARRAY[1..3] OF SuctionPad; 
	suctionA22BottomRight : ARRAY[1..3] OF SuctionPad;
	
	suctionA22Bottom : ARRAY[1..2] OF SuctionPad;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>