<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{bb23f57b-bfaa-4807-862f-695fb779bd1d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR_OUTPUT
	currentTime : TIMESTRUCT;
END_VAR
VAR
	execute : BOOL;
	manualStep : BOOL := TRUE;
	manualSuction : BOOL := FALSE;
	stop : BOOL;
	
	moduleA22 : FiberboardEx;
END_VAR
VAR
	getLocalTime : FB_LocalSystemTime;
	test : BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CallHardwareModules(); //start program with hardware call

SetupHardware(); //setup hardware

callModules(); //call section modules

CallHardwareModules(); //end program with hardware call


//unrelated tests
//BundleToJson();]]></ST>
    </Implementation>
    <Action Name="callModules" Id="{524a05bd-aa5d-4749-8232-9d95fc7a69c5}">
      <Implementation>
        <ST><![CDATA[getLocalTime(
	sNetID:= , 
	bEnable:= TRUE, 
	dwCycle:= , 
	dwOpt:= , 
	tTimeout:= , 
	bValid=> , 
	systemTime=> currentTime, 
	tzID=> );

moduleA22(
	execute:= execute, 
	stop:= stop, 
	manualStep:= manualStep, 
	manualSuction:= manualSuction, 
	
	benderLeft:= benderA22Left, 
	robotLeft:= robot3, 
	robotRight:= robot4, 
	skidLeft:= skidA22Left, 
	skidRight:= skidA22Right, 
	magazineLeft:= magazineA22Left, 
	magazineRight:= magazineA22Right, 
	wrapper:= wrapperA22,
	insertionLeft:= insertionA22Left, 
	insertionRight:= insertionA22Right,
	pistonBottom:= pistonA22Bottom, 
	suctionTopLeft:= suctionA22TopLeft, 
	suctionTopRight:= suctionA22TopRight, 
	suctionBottomLeft:= suctionA22BottomLeft, 
	suctionBottomRight:= suctionA22BottomRight, 
	suctionBottom:= suctionA22Bottom,
	
	generalError=> , 
	failLeft=> , 
	failRight=> );]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="MAIN">
      <LineId Id="1095" Count="6" />
      <LineId Id="1118" Count="1" />
      <LineId Id="1102" Count="0" />
      <LineId Id="1093" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.callModules">
      <LineId Id="30" Count="7" />
      <LineId Id="28" Count="1" />
      <LineId Id="2" Count="13" />
      <LineId Id="18" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="20" Count="4" />
      <LineId Id="40" Count="0" />
      <LineId Id="25" Count="2" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>